<?xml version="1.0"?>
<package>
  <name>rrbot_controllers</name>
  <version>1.0.9</version>
  <description>The rrbot_controllers package</description>

  <maintainer email="adria.roig@pal-robotics.com">Adrià Roig</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>controller_manager</run_depend>

</package>